test: section -> fixed, button -> sticky, main ->  z-index + margin-top

--- a/main.css
+++ b/main.css
@@ -1,42 +1,53 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 :root {
-  --common-width: 50vw;
+	--common-width: 50vw;
 }
 
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 section {
-  width: var(--common-width);
-  background-color: brown;
-  color: white;
-  margin: 0 auto 20px auto
+	position: fixed;
+	width: 100%;
+	background-color: brown;
+	color: white;
+	margin: 0 auto 20px auto;
 }
 
 main {
-  display: flex;
-  overflow-x: scroll;
-  flex-grow: 1;
-  scroll-snap-type: x mandatory;
+	background-color: white;
+	z-index: 1;
+	margin-top: 10rem;
+	display: flex;
+	overflow-x: unset;
+	flex-grow: 1;
+	scroll-snap-type: x mandatory;
 }
 
 .l-documents {
-  flex-shrink: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  scroll-snap-align: center;
+	background-color: white;
+	z-index: 1;
+	flex-shrink: 0;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	scroll-snap-align: center;
 }
 
 .documents {
-  width: var(--common-width);
+	width: var(--common-width);
+}
+
+button {
+	position: sticky;
+	top: 1rem;
 }
